#+TITLE: Changelog

* Unreleased

** Added

** Updated
   - dev: clojure-lint-action v3 in lint-review workflow
   - dev: megalinter java v8.3.0 in megalinter workflow

* 2024-11-03
** Added
   - alias: `:security/nvd-scan` and `:security/nvd-fix` library vulnerabilities scan and fix

** Updated
   - dev: megalinter v8.1.0 supports Grafana dashboards in flavors
   - dev: lychee spell config file for megalinter workflow
   - dev: clj-kondo 2024.09.27 in quality-checks GitHub workflow
   - Update library versions using `make outdated`

   | :name                                | :current   | :latest    |
   | ------------------------------------ | ---------- | ---------- |
   | clj-commons/clj-yaml                 | 1.0.27     | 1.0.28     |
   | com.github.flow-storm/clojure        | 1.12.0     | 1.12.0-1   |
   | com.github.flow-storm/flow-storm-dbg | 3.17.3     | 3.17.4     |
   | com.github.liquidz/antq              | 2.9.1227   | 2.10.1241  |
   | com.github.seancorfield/next.jdbc    | 1.3.939    | 1.3.955    |
   | djblue/portal                        | 0.57.3     | 0.58.2     |
   | integrant/repl                       | 0.3.3      | 0.4.0      |
   | io.github.nextjournal/clerk          | 0.16.1016  | 0.17.1102  |

   Available changes:
   - https://github.com/clj-kondo/clj-kondo/blob/v2024.09.27/CHANGELOG.md
   - https://github.com/clj-commons/clj-yaml/blob/v1.0.28/CHANGELOG.adoc
   - https://github.com/clojure/clojure/compare/clojure-1.12.0...head
   - https://github.com/liquidz/antq/blob/2.10.1241/CHANGELOG.adoc
   - https://github.com/seancorfield/next-jdbc/blob/v1.3.955/CHANGELOG.md
   - https://github.com/djblue/portal/blob/0.58.2/CHANGELOG.md
   - https://github.com/weavejester/integrant-repl/compare/0.3.3...0.4.0
   - https://github.com/nextjournal/clerk/blob/v0.17.1102/CHANGELOG.md


* 2024-09-09
** Added
   - dev: megalinter-upgrade task to upgrade config
   - dev: megalinter grafana dashboard connections via github organization secrets