@@ -7,6 +7,7 @@
 ** Updated
    - dev: clojure-lint-action v3 in lint-review workflow
    - dev: megalinter java v8.3.0 in megalinter workflow
+   - dev: setup-clojure 13.1, clj-kondo 2024.11.14, cljstyle 0.17.642 in quality-checks workflow
 
 * 2024-11-03
 ** Added
